src/tui/tests/snapshots/mudpuppy__tui__tests__rendering__diff_pane_focused_and_cursor_moved.snap
---
source: src/tui/tests.rs
expression: screen(&term)
---
"┌ Files (7) ───────────────┐┌ src/long.rs [modified] 2/7 ──────────────────────────────────────────┐"
"│M src/alpha.rs  +3 -2     ││@@ -1,19 +1,20 @@ impl Long {                                         │"
"│M src/long.rs  +4 -2      ││    1     1   line 01                                                 │"
"│M README.md  +1 -1        ││    2     2   line 02                                                 │"
"│A src/new_module.rs  +3 -0││    3     3   line 03                                                 │"
"│D old.txt  +0 -2          ││    4     4   line 04                                                 │"
"│A assets/logo.png  +0 -0  ││    5     5   line 05                                                 │"
"│R src/relocated.rs  +0 -0 ││    6     6   line 06                                                 │"
"│                          ││    7     7   line 07                                                 │"
"│                          ││    8     8   line 08                                                 │"
"│                          ││    9       - line 09 old                                             │"
"│                          ││          9 + line 09 new                                             │"
"│                          ││   10    10   line 10                                                 │"
"│                          ││   11    11   line 11                                                 │"
"│                          ││   12    12   line 12                                                 │"
"│                          ││   13    13   line 13                                                 │"
"│                          ││   14    14   line 14                                                 │"
"│                          ││   15    15   line 15                                                 │"
"│                          ││   16    16   line 16                                                 │"
"│                          ││   17    17   line 17                                                 │"
"│                          ││   18    18   line 18                                                 │"
"│                          ││         19 + line 19 added                                           │"
"└──────────────────────────┘└──────────────────────────────────────────────────────────────────────┘"
" local vs main  ·  file 2/7  ·  +4 -2  ·  [diff] TOP  ? help  q quit                                "
