src/tui/tests/snapshots/mudpuppy__tui__tests__rendering__help_overlay.snap
---
source: src/tui/tests/rendering.rs
expression: screen(&term)
---
"┌ Files (7) ──────┌ Help ────────────────────────────────────────────────────────┐─────────────────┐"
"│M src/alpha.rs  +│mudpuppy — default keymap                                     │                 │"
"│M src/long.rs  +4│Navigation                                                    │                 │"
"│M README.md  +1 -│  j / k         move cursor (diff) / selection (tree)         │                 │"
"│A src/new_module.│  d/u  f/b      half / full page down / up                    │                 │"
"│D old.txt  +0 -2 │  g g / G       top / bottom (cursor in diff, first/last file)│                 │"
"│A assets/logo.png│  } / { (n/N)   next / prev hunk                              │                 │"
"│R src/relocated.r│  J / K         next / prev file (from the diff pane)         │                 │"
"│                 │  5j  100G      a number prefixes a count                     │                 │"
"│                 │Focus                                                         │                 │"
"│                 │  Tab / l / h   toggle · tree → diff · diff → tree            │                 │"
"│                 │Annotations  (Space is the leader)                            │                 │"
"│                 │  Space a       annotations tab (all files) ↔ file tree       │                 │"
"│                 │  v / V  Esc    whole-line selection (diff) · clear           │                 │"
"│                 │  Space c c/f/r comment line/selection · file · reply         │                 │"
"│                 │  Space c e/d/s edit · delete (confirm y) · cycle status      │                 │"
"│                 │More                                                          │                 │"
"│                 │  Space t r     release the turn; first release approves      │                 │"
"│                 │  Space f       add any file · Space e/y · + expand context   │                 │"
"│                 │  :             command palette                               │                 │"
"│                 │  ? q Ctrl-c    help · quit                                   │                 │"
"│                 │press ?, q, or Esc to close                                   │                 │"
"└─────────────────└──────────────────────────────────────────────────────────────┘─────────────────┘"
" local vs main  ·  file 1/7  ·  +3 -2  ·  [tree] ALL  ? help  q quit                                "
