src/tui/tests/snapshots/mudpuppy__tui__tests__rendering__initial_view.snap
---
source: src/tui/tests/rendering.rs
assertion_line: 13
expression: screen(&term)
---
"┌ Files 7 │ Annotations 0 ─┐┌ src/alpha.rs [modified] 1/7 ─────────────────────────────────────────┐"
"│M src/alpha.rs  +3 -2     ││@@ -1,4 +1,5 @@ fn alpha() {                                          │"
"│M src/long.rs  +4 -2      ││    1     1   use std::io;                                            │"
"│M README.md  +1 -1        ││    2       - let x = 1;                                              │"
"│A src/new_module.rs  +3 -0││          2 + let x = 2;                                              │"
"│D old.txt  +0 -2          ││          3 + let y = 3;                                              │"
"│A assets/logo.png  +0 -0  ││    3     4   println!("{x}");                                        │"
"│R src/relocated.rs  +0 -0 ││    4     5   done                                                    │"
"│                          ││  ↕ 15 hidden lines — show more                                       │"
"│                          ││@@ -20,2 +21,2 @@ fn beta() {                                         │"
"│                          ││   20    21   let beta = compute();                                   │"
"│                          ││   21       - old beta                                                │"
"│                          ││         22 + new beta                                                │"
"│                          ││                                                                      │"
"│                          ││                                                                      │"
"│                          ││                                                                      │"
"│                          ││                                                                      │"
"│                          ││                                                                      │"
"│                          ││                                                                      │"
"│                          ││                                                                      │"
"│                          ││                                                                      │"
"│                          ││                                                                      │"
"└──────────────────────────┘└──────────────────────────────────────────────────────────────────────┘"
" local vs main  ·  file 1/7  ·  +3 -2  ·  [tree] ALL  ? help  q quit                                "
