src/tui/tests/snapshots/mudpuppy__tui__tests__rendering__metadata_only_rename_notice.snap
---
source: src/tui/tests/rendering.rs
expression: screen(&term)
---
"┌ Files (7) │ Annotations ─┐┌ src/relocated.rs [renamed] 7/7 ──────────────────────────────────────┐"
"│M src/alpha.rs  +3 -2     ││No line changes (metadata-only change)                                │"
"│M src/long.rs  +4 -2      ││                                                                      │"
"│M README.md  +1 -1        ││                                                                      │"
"│A src/new_module.rs  +3 -0││                                                                      │"
"│D old.txt  +0 -2          ││                                                                      │"
"│A assets/logo.png  +0 -0  ││                                                                      │"
"│R src/relocated.rs  +0 -0 ││                                                                      │"
"│                          ││                                                                      │"
"│                          ││                                                                      │"
"│                          ││                                                                      │"
"│                          ││                                                                      │"
"│                          ││                                                                      │"
"│                          ││                                                                      │"
"│                          ││                                                                      │"
"│                          ││                                                                      │"
"│                          ││                                                                      │"
"│                          ││                                                                      │"
"│                          ││                                                                      │"
"│                          ││                                                                      │"
"│                          ││                                                                      │"
"│                          ││                                                                      │"
"└──────────────────────────┘└──────────────────────────────────────────────────────────────────────┘"
" local vs main  ·  file 7/7  ·  +0 -0  ·  [tree] ALL  ? help  q quit                                "
