src/tui/tests/snapshots/mudpuppy__tui__tests__rendering__picker_overlay_lists_filtered_files.snap
---
source: src/tui/tests/rendering.rs
expression: screen(&term)
---
"┌ Files (7) │ Annotations ─┐┌ src/alpha.rs [modified] 1/7 ─────────────────────────────────────────┐"
"│M src/alpha.rs  +3 -2     ││@@ -1,4 +1,5 @@ fn alpha() {                                          │"
"│M src/long.rs  +4 -2      ││    1     1   use std::io;                                            │"
"│M README.md  +1 -1        ││    2       - let x = 1;                                              │"
"│A src/new_modu┌ Add file ──────────────────────────────────────────────────────────┐              │"
"│D old.txt  +0 │> src                                                               │              │"
"│A assets/logo.│src/beta.rs                                                         │              │"
"│R src/relocate│src/alpha.rs                                                        │              │"
"│              │src/long_file.rs                                                    │              │"
"│              │                                                                    │              │"
"│              │                                                                    │              │"
"│              │                                                                    │              │"
"│              │                                                                    │              │"
"│              │                                                                    │              │"
"│              │                                                                    │              │"
"│              │                                                                    │              │"
"│              │                                                                    │              │"
"│              │                                                                    │              │"
"│              │                                                                    │              │"
"│              └────────────────────────────────────────────────────────────────────┘              │"
"│                          ││                                                                      │"
"│                          ││                                                                      │"
"└──────────────────────────┘└──────────────────────────────────────────────────────────────────────┘"
" local vs main  ·  file 1/7  ·  +3 -2  ·  [tree] ALL  ? help  q quit                                "
