src/tui/tests/snapshots/mudpuppy__tui__tests__rendering__prompt_overlay_shows_message_and_options.snap
---
source: src/tui/tests/rendering.rs
assertion_line: 65
expression: s
---
"┌ Files 7 │ Annotations 0 ─┐┌ src/alpha.rs [modified] 1/7 ─────────────────────────────────────────┐"
"│M src/alpha.rs  +3 -2     ││@@ -1,4 +1,5 @@ fn alpha() {                                          │"
"│M src/long.rs  +4 -2      ││    1     1   use std::io;                                            │"
"│M README.md  +1 -1        ││    2       - let x = 1;                                              │"
"│A src/new_module.rs  +3 -0││          2 + let x = 2;                                              │"
"│D old.txt  +0 -2          ││          3 + let y = 3;                                              │"
"│A assets/logo.png  +0 -0  ││    3     4   println!("{x}");                                        │"
"│R src/relocated.r┌ mudpuppy ────────────────────────────────────────────────────┐                 │"
"│                 │mudpuppy v9.9.9 is available. Update now?                     │                 │"
"│                 │                                                              │                 │"
"│                 │ 1 Install    2 Ignore for now    3 Skip                      │                 │"
"│                 │                                                              │                 │"
"│                 │←/→ choose  ·  1-9 pick  ·  Enter confirm  ·  Esc dismiss     │                 │"
"│                 │                                                              │                 │"
"│                 │                                                              │                 │"
"│                 └──────────────────────────────────────────────────────────────┘                 │"
"│                          ││                                                                      │"
"│                          ││                                                                      │"
"│                          ││                                                                      │"
"│                          ││                                                                      │"
"│                          ││                                                                      │"
"│                          ││                                                                      │"
"└──────────────────────────┘└──────────────────────────────────────────────────────────────────────┘"
" local vs main  ·  file 1/7  ·  +3 -2  ·  [tree] ALL  ? help  q quit                                "
