src/tui/tests/snapshots/mudpuppy__tui__tests__rendering__tree_selection_moves_to_added_file.snap
---
source: src/tui/tests/rendering.rs
assertion_line: 23
expression: screen(&term)
---
"┌ Files 7 │ Annotations 0 ─┐┌ src/new_module.rs [added] 4/7 ───────────────────────────────────────┐"
"│M src/alpha.rs  +3 -2     ││@@ -0,0 +1,3 @@                                                       │"
"│M src/long.rs  +4 -2      ││          1 + pub fn hello() {}                                       │"
"│M README.md  +1 -1        ││          2 + pub fn world() {}                                       │"
"│A src/new_module.rs  +3 -0││          3 + // brand new                                            │"
"│D old.txt  +0 -2          ││                                                                      │"
"│A assets/logo.png  +0 -0  ││                                                                      │"
"│R src/relocated.rs  +0 -0 ││                                                                      │"
"│                          ││                                                                      │"
"│                          ││                                                                      │"
"│                          ││                                                                      │"
"│                          ││                                                                      │"
"│                          ││                                                                      │"
"│                          ││                                                                      │"
"│                          ││                                                                      │"
"│                          ││                                                                      │"
"│                          ││                                                                      │"
"│                          ││                                                                      │"
"│                          ││                                                                      │"
"│                          ││                                                                      │"
"│                          ││                                                                      │"
"│                          ││                                                                      │"
"└──────────────────────────┘└──────────────────────────────────────────────────────────────────────┘"
" local vs main  ·  file 4/7  ·  +3 -0  ·  [tree] ALL  ? help  q quit                                "
